--- a/index.html
+++ b/index.html
@@ -36,29 +36,29 @@
             <br><br><br>
         <h3 id="2">KOMPETENSI KEAHLIAN SMKN 1 PROBOLINGGO</h3>
         <center>
-            <table cellpadding="30">
+            <table cellspacing="100">
                 <tr>
                     <td>
-                        <center><img src="rpl.jpg" alt="c:\Users\Lenovo\Downloads\rpl.jpg" width="90px"></center>
+                        <center><img src="rpl.jpg" alt="c:\Users\Lenovo\Downloads\rpl.jpg" height="100" width="100"></center>
                         <br>
                         <center><a href="rekayasa perangkat lunak">rekayasa perangkat lunak</a></center>
                     </td>
                     <td>
-                        <center><img src="akuntansi.jpg" alt="c:\Users\Lenovo\Downloads\akuntansi.jpg" width="90px"></center>
+                        <center><img src="akuntansi.jpg" alt="c:\Users\Lenovo\Downloads\akuntansi.jpg" height="100" width="100"></center>
                         <br>
                         <center><a href="akuntansi">akuntansi</a></center>
                     </td>
                     <td>
-                        <center><img src="bdp.jpg" alt="c:\Users\Lenovo\Downloads\bdp.jpg" width="90px"></center>
+                        <center><img src="bdp.jpg" alt="c:\Users\Lenovo\Downloads\bdp.jpg" height="100" width="100"></center>
                         <br> <center><a href="bisnis digital">bisnis digital</a></center>
                     </td>
                     <td>
-                        <center><img src="lp.jpg" alt="c:\Users\Lenovo\Downloads\lp.jpg" width="90px"></center>
+                        <center><img src="lp.jpg" alt="c:\Users\Lenovo\Downloads\lp.jpg" height="100" width="100"></center>
                         <br>
                         <center><a href="layanan perbangkan">layanan perbangkan</a></center>
                     </td>
                     <td>
-                        <center><img src="otkp.jpg" alt="c:\Users\Lenovo\Downloads\otkp.jpg" width="90px">
+                        <center><img src="otkp.jpg" alt="c:\Users\Lenovo\Downloads\otkp.jpg" height="100" width="100">
                         <br>
                         <center><a href="manajemen perkantoran">manajemen perkantoran</a></center>
                     </td>
