--- a/index.html
+++ b/index.html
@@ -5,36 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <center><img src="logo.gif" alt="c:\Users\Lenovo\Downloads\logo.gif" width="10%">
-        <center><h2>SELAMAT DATANG DI WEBSITE SMKN 1 PROBOLINGGO</h2></center> <hr>
+        <center><h2 class="nama">SELAMAT DATANG DI WEBSITE SMKN 1 PROBOLINGGO</h2></center> <hr>
         <table border="0" cellspacing="0" cellpadding="8">
             <tr>
                 <td>
-                    <a href="#1">Sambutan kepala sekolah</a>
+                    <a href="#1" class="tombolatas">Sambutan kepala sekolah</a>
                 </td>
                 <td>
-                    <a href="#2">Kompetensi keahlian</a>
+                    <a href="#2"  class="tombolatas">Kompetensi keahlian</a>
                 </td>
                 <td>
-                    <a href="#3">Profil sekolah</a>
+                    <a href="#3"  class="tombolatas">Profil sekolah</a>
                 </td>
                 <td>
-                    <a href="#4">Esktra kurikuler</a>
+                    <a href="#4"  class="tombolatas">Esktra kurikuler</a>
                 </td>
                 <td>
-                    <a href="#5">Kontak kami</a>
+                    <a href="#5"  class="tombolatas">Kontak kami</a>
                 </td>
             </tr>
         </table>
         <img src="banner-SELAMAT-DATANG.jpg" alt="c:\Users\Lenovo\Downloads\banner-SELAMAT-DATANG.jpg" height="540">
-        <h3 id="1">SAMBUTAN KEPALA SEKOLAH</h3>
-        <p>Assalamualaikum Warahmatullahi Wabarakaatuh. Selamat Datang di website Sekolah SMKN 1 Probolinggo Dengan Harapan bisa menjadikan media Informasi baik dilingkungan Sekolah maupun diluar Lingkungan
+        <h3 id="1" class="smbt">SAMBUTAN KEPALA SEKOLAH</h3>
+        <p class="ass">Assalamualaikum Warahmatullahi Wabarakaatuh. Selamat Datang di website Sekolah SMKN 1 Probolinggo Dengan Harapan bisa menjadikan media Informasi baik dilingkungan Sekolah maupun diluar Lingkungan
             Sekolah. SMKN 1 Probolinggo Terus berupaya meningkatkan Kualitas pendidikan dan Pelayanan untuk menghasilkan siswa-siswa yang berkualitas baik secara Ilmu Pengetahuan maupun Ilmu Agama. Website ini hadir
             sebagai salah satu media informasi dan pembelajaran Sekolah. Semoga pendidikan di Negara kita bisa menjadi yang terbaik</p>
             <br><br><br>
-        <h3 id="2">KOMPETENSI KEAHLIAN SMKN 1 PROBOLINGGO</h3>
+        <h3 id="2" class="kmptn">KOMPETENSI KEAHLIAN SMKN 1 PROBOLINGGO</h3>
         <center>
             <table cellspacing="100">
                 <tr>
@@ -68,12 +69,12 @@
         </center>
     </center>
         <center>
-            <h3>PROFIL SMKN 1 PROBOLINGGO </h3>
+            <h3 class="prfl">PROFIL SMKN 1 PROBOLINGGO </h3>
             <iframe id="3" width="683" height="384" src="https://www.youtube.com/embed/6bnVqFdnO_o" title="PROFIL SMKN 1 PROBOLINGGO 2022" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <br><br><br><br><br><br><br>
         </center>
         <center>
-                <h3 id="4">Esktra kulikuler</h3>
+                <h3 id="4" class="exs">Esktra kulikuler</h3>
                 <table border="1" cellspacing="0" cellpadding="30">
                     <thead>
                         <tr>
@@ -122,7 +123,7 @@
                 <br><br><br><br><br><br>
         </center>
         <center>
-            <h3 id="5">HUBUNGI KAMI</h3>
+            <h3 id="5" class="hello">HUBUNGI KAMI</h3>
             <table border="1" cellspacing="0" cellpadding="30">
                 <tr>
                     <td>
